--- a/index.html
+++ b/index.html
@@ -1,95 +1,250 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifolio</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/b948e7e074.js" crossorigin="anonymous"></script>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/b948e7e074.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <style>
+    .foto-perfil{
+    height: 100%;
+    width: auto;
+    max-width: 100%;
+    border-radius: 50%;
+}
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Vinicius Bomfim</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+.corPrimaria{
+    background-color: #18bc9c;
+}
 
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Projetos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sobre mim</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contato</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <section class="jumbotron text-center">
-    <div class="container">
-      <img class=".foto-perfil" src="#" alt="Foto de perfil">
-      <h1 class="jumbotron-heading">Vinicius Bomfim</h1>
-      <p class="lead text-muted">Estudante de Engenharia da Computação | Estudante de Analise e Desenvolvimento de Sistemas | Html | Css | JavaScript | C++| Banco de dados</p>
-      <p>
-        <a href="#" class="btn btn-dark my-2">Contato</a>
-      </p>
-     <a href="https://www.linkedin.com/in/vinicius-bomfim28/"><i class="fab fa-linkedin"></i></a> 
-     <a href="https://github.com/vinihikizin"><i class="fab fa-github"></i></a> 
-      <a href="https://www.instagram.com/vini.sbomfim/"><i class="fab fa-instagram"></i></a> 
-    </div>
-  </section>
-  <div class="album py-5 bg-light">
-    <div class="container">
+.corSecundaria{
+    background-color: #2c3e50;
+}
 
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card mb-4 box-shadow">
-            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="img/filmes.png">
-            <div class="card-body">
-              <p class="card-text">Pagina para avaliação de filmes</p>
-              <ul>
-                <li>Html</li>
-                <li>Css</li>
-                <li>JavaScript</li>
-              </ul>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                 <a href="https://github.com/vinihikizin/av_movies"> <button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+p{
+    font-family: Lato, 'Helvetica Neve', Arial, Helvetica, sans-serif;
+    color: black !important;
+}
+
+.icones{
+    padding-left: 5px;
+}
+
+.titulosBrancos{
+    text-decoration: underline;
+    text-underline-position: below;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white;
+}
+
+.titulosVerdes{
+    text-decoration: underline;
+    text-underline-position: below;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #18bc9c;
+}
+
+.textoBranco{
+    color: white !important;
+}
+
+.jumbotron{
+    margin-bottom: 0px;
+}
+
+.textoFooter{
+    margin: 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+  </style>
+  <body>
+    <nav class="corSecundaria navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand textoBranco" href="#">Vinicius Bomfim</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto"></ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link textoBranco" href="#projetos">Projetos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link textoBranco" href="#contato">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section class="jumbotron text-center corPrimaria">
+      <div class="container">
+        <img class=".foto-perfil" src="#" alt="Foto de perfil" />
+        <h1 class="jumbotron-heading textoBranco">Vinicius Bomfim</h1>
+        <p class="lead textoBranco">
+          Estudante de Engenharia da Computação | Estudante de Analise e
+          Desenvolvimento de Sistemas | Html | Css | JavaScript | C++| Banco de
+          dados
+        </p>
+        <p>
+          <a href="#contato" class="btn btn-dark my-2">Contato</a>
+        </p>
+        <a href="https://www.linkedin.com/in/vinicius-bomfim28/"
+          ><i class="fab fa-linkedin textoBranco"></i
+        ></a>
+        <a href="https://github.com/vinihikizin"
+          ><i class="fab fa-github icones textoBranco"></i
+        ></a>
+        <a href="https://www.instagram.com/vini.sbomfim/"
+          ><i class="fab fa-instagram icones textoBranco"></i
+        ></a>
+      </div>
+    </section>
+    <div class="album py-5 bg-light" id="projetos">
+      <div class="container">
+        <h2 class="jumbotron-heading text-center titulosVerdes">Projetos</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card mb-4 box-shadow">
+              <img
+                class="card-img-top"
+                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                alt="Thumbnail [100%x225]"
+                style="height: 225px; width: 100%; display: block"
+                src="img/filmes.png"
+              />
+              <div class="card-body">
+                <p class="card-text">Pagina para avaliação de filmes.</p>
+                <ul>
+                  <li>Html</li>
+                  <li>Css</li>
+                  <li>JavaScript</li>
+                </ul>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://github.com/vinihikizin/av_movies">
+                      <button
+                        type="button"
+                        class="btn btn-sm btn-outline-success"
+                      >
+                        Ver projeto
+                      </button></a
+                    >
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-primary"
+                    >
+                      Código
+                    </button>
+                  </div>
                 </div>
-                <small class="text-muted">2 minutos</small>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card mb-4 box-shadow">
-            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+          <div class="col-md-6">
+            <div class="card mb-4 box-shadow">
+              <img
+                class="card-img-top"
+                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                alt="Thumbnail [100%x225]"
+                style="height: 225px; width: 100%; display: block"
+                src=""
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  Portifólio responsivo.
+                </p>
+                <ul>
+                  <li>Html</li>
+                  <li>Bootstrap</li>
+                  <li>Css</li>
+                </ul>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-success"
+                    >
+                      Ver projeto
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-primary"
+                    >
+                      Código
+                    </button>
+                  </div>
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</body>
+
+        <!-- Sobre mim-->
+        <section class="jumbotron text-center corPrimaria" id="sobre-mim">
+          <div class="container">
+            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
+            <p class="lead">Olá, meu nome é Vinicius e possuo 19 anos, sou amante de progamação desde os 15 anos quando comecei a estudar html 4 e css. Atualmente faço faculdade de engenharia da computação, sou apaixonado por games e em desenvolvimento, possuo experiência comprovada na área e adoro compartilhar meu conhecimento sempre que possível com meus colegas de trabalho. </p>
+          </div>
+        </section>
+        
+        <!-- Contato -->
+      <section class="corPrimaria" id="contato">
+        <div class="container-fluid">
+          <h3 style="padding-top: 60px;"class="text-center titulosBrancos">Disponível para oportunidades</h3>
+          <a href="mailto:vinicius.bomfim0328@gmail.com"><h4 style="padding-bottom: 60px; margin-bottom: 0px;" class="text-center">👉vinicius.bomfim0328@gmail.com👈</h4></a>
+        </div>
+      </section>
+      <!-- Footer -->
+      <footer class="text-center corSecundaria textoFooter">
+        <p class="textoBranco">Copyright 2020 Vinicius</p>
+      </footer>
+  </body>
 </html>
