--- a/index.html
+++ b/index.html
@@ -31,67 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <style>
-    .foto-perfil{
-    height: 100%;
-    width: auto;
-    max-width: 100%;
-    border-radius: 50%;
-}
 
-.corPrimaria{
-    background-color: #18bc9c;
-}
-
-.corSecundaria{
-    background-color: #2c3e50;
-}
-
-p{
-    font-family: Lato, 'Helvetica Neve', Arial, Helvetica, sans-serif;
-    color: black !important;
-}
-
-.icones{
-    padding-left: 5px;
-}
-
-.titulosBrancos{
-    text-decoration: underline;
-    text-underline-position: below;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: white;
-}
-
-.titulosVerdes{
-    text-decoration: underline;
-    text-underline-position: below;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #18bc9c;
-}
-
-.textoBranco{
-    color: white !important;
-}
-
-.jumbotron{
-    margin-bottom: 0px;
-}
-
-.textoFooter{
-    margin: 0px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-html{
-  scroll-behavior: smooth;
-}
-  </style>
   <body>
     <nav class="corSecundaria navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand textoBranco" href="#">Vinicius Bomfim</a>
@@ -124,7 +64,7 @@ html{
     </nav>
     <section class="jumbotron text-center corPrimaria">
       <div class="container">
-        <img class=".foto-perfil" src="#" alt="Foto de perfil" />
+        <img class="foto-perfil" src="img/suafoto.png" alt="Foto de perfil" />
         <h1 class="jumbotron-heading textoBranco">Vinicius Bomfim</h1>
         <p class="lead textoBranco">
           Estudante de Engenharia da Computação | Estudante de Analise e
@@ -193,12 +133,10 @@ html{
                 data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
                 alt="Thumbnail [100%x225]"
                 style="height: 225px; width: 100%; display: block"
-                src=""
+                src="img/portifolio.png"
               />
               <div class="card-body">
-                <p class="card-text">
-                  Portifólio responsivo.
-                </p>
+                <p class="card-text">Portifólio responsivo.</p>
                 <ul>
                   <li>Html</li>
                   <li>Bootstrap</li>
@@ -227,24 +165,40 @@ html{
       </div>
     </div>
 
-        <!-- Sobre mim-->
-        <section class="jumbotron text-center corPrimaria" id="sobre-mim">
-          <div class="container">
-            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-            <p class="lead">Olá, meu nome é Vinicius e possuo 19 anos, sou amante de progamação desde os 15 anos quando comecei a estudar html 4 e css. Atualmente faço faculdade de engenharia da computação, sou apaixonado por games e em desenvolvimento, possuo experiência comprovada na área e adoro compartilhar meu conhecimento sempre que possível com meus colegas de trabalho. </p>
-          </div>
-        </section>
-        
-        <!-- Contato -->
-      <section class="corPrimaria" id="contato">
-        <div class="container-fluid">
-          <h3 style="padding-top: 60px;"class="text-center titulosBrancos">Disponível para oportunidades</h3>
-          <a href="mailto:vinicius.bomfim0328@gmail.com"><h4 style="padding-bottom: 60px; margin-bottom: 0px;" class="text-center">👉vinicius.bomfim0328@gmail.com👈</h4></a>
-        </div>
-      </section>
-      <!-- Footer -->
-      <footer class="text-center corSecundaria textoFooter">
-        <p class="textoBranco">Copyright 2020 Vinicius</p>
-      </footer>
+    <!-- Sobre mim-->
+    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
+      <div class="container">
+        <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
+        <p class="lead">
+          Olá, meu nome é Vinicius e possuo 19 anos, sou amante de progamação
+          desde os 15 anos quando comecei a estudar html 4 e css. Atualmente
+          faço faculdade de engenharia da computação, sou apaixonado por games e
+          em desenvolvimento, possuo experiência comprovada na área e adoro
+          compartilhar meu conhecimento sempre que possível com meus colegas de
+          trabalho.
+        </p>
+      </div>
+    </section>
+
+    <!-- Contato -->
+    <section class="corPrimaria" id="contato">
+      <div class="container-fluid">
+        <h3 style="padding-top: 60px" class="text-center titulosBrancos">
+          Disponível para oportunidades
+        </h3>
+        <a href="mailto:vinicius.bomfim0328@gmail.com"
+          ><h4
+            style="padding-bottom: 60px; margin-bottom: 0px"
+            class="text-center"
+          >
+            👉vinicius.bomfim0328@gmail.com👈
+          </h4></a
+        >
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer class="text-center corSecundaria textoFooter">
+      <p class="textoBranco">Copyright 2020 Vinicius</p>
+    </footer>
   </body>
 </html>
