--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       src="https://kit.fontawesome.com/b948e7e074.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-
+  
   <body>
     <nav class="corSecundaria navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand textoBranco" href="#">Vinicius Bomfim</a>
@@ -144,18 +145,22 @@
                 </ul>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="#">
                     <button
                       type="button"
                       class="btn btn-sm btn-outline-success"
                     >
                       Ver projeto
                     </button>
+                  </a>
+                  <a href="https://github.com/vinihikizin/portifolio">
                     <button
                       type="button"
                       class="btn btn-sm btn-outline-primary"
                     >
                       Código
                     </button>
+                  </a>
                   </div>
                 </div>
               </div>
